kubernetes/b7a_mb_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "b7a-mb"
  name: "b7a-mb-service"
  namespace: "default"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 5672
    name: amqp  
  - port: 8672
    name: amqps
  - port: 9000
    name: http              
  selector:
    app: "b7a-mb"
  type: "NodePort"
